--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -82,7 +82,6 @@ body {background-color: #f3f1e5;}
     font-weight: bold;
 }
 #preview a {color: unset;}
-
 .placeholder-boto, .placeholder-youtube {
     background: #eee;
     color: #555;
@@ -91,6 +90,5 @@ body {background-color: #f3f1e5;}
     border: 1px dashed #aaa;
     margin: 5px 0;
 }
-.dropdown-item:active {
-    background-color: transparent;
-}
+.dropdown-item:active {background-color: transparent;}
+.CodeMirror {font-size: 12px;}
